--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                 <div>
                     <a href="#">A link</a> 
                 </div>
-                <p>Hello everyone!! </p>
+                <p>Hiya everyone!! </p>
             </div>
             <div class="ch2">
-                <h2>How is everyone doing?</h2>
+                <h2>How are you all doing??</h2>
             </div>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
